[gd_scene load_steps=11 format=2]

[ext_resource path="res://interfaces/dialogue/Files.gd" type="Script" id=1]
[ext_resource path="res://interfaces/theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://interfaces/theme/panel/alertbox.styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://font/Daemon Full Working (1).ttf" type="DynamicFontData" id=4]
[ext_resource path="res://font/Daemon.tres" type="DynamicFont" id=5]
[ext_resource path="res://sfx/cancel.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/select.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/cursor.wav" type="AudioStream" id=8]
[ext_resource path="res://interfaces/dialogue/CursorIcon.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="FileBoxes" type="Node2D"]
position = Vector2( 8, 8 )
z_index = 1
z_as_relative = false
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="PanelContainer1" type="PanelContainer" parent="."]
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 220, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer1"]
margin_left = 1.0
margin_top = 1.0
margin_right = 239.0
margin_bottom = 31.0
rect_clip_content = false
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.207843, 0.101961, 0.101961, 1 )
bbcode_enabled = true
bbcode_text = "[color=#FF0000]1. [New Game][/color] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
text = "1. [New Game] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
scroll_active = false

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_top = 47.0
margin_right = 240.0
margin_bottom = 79.0
rect_min_size = Vector2( 220, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2"]
margin_left = 1.0
margin_top = 1.0
margin_right = 239.0
margin_bottom = 31.0
rect_clip_content = false
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.207843, 0.101961, 0.101961, 1 )
bbcode_enabled = true
bbcode_text = "[color=#FF0000]1. [New Game][/color] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
text = "1. [New Game] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
scroll_active = false

[node name="PanelContainer3" type="PanelContainer" parent="."]
margin_top = 94.0
margin_right = 240.0
margin_bottom = 126.0
rect_min_size = Vector2( 220, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer3"]
margin_left = 1.0
margin_top = 1.0
margin_right = 239.0
margin_bottom = 31.0
rect_clip_content = false
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.207843, 0.101961, 0.101961, 1 )
bbcode_enabled = true
bbcode_text = "[color=#FF0000]1. [New Game][/color] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
text = "1. [New Game] - Starting Area
[Character 1] Level 1 [???/???XP]
[Character 2] Level 1 [???/???XP]"
scroll_active = false

[node name="CursorIcon" type="Sprite" parent="."]
script = ExtResource( 9 )

[node name="selectsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="cursorsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="backsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
